--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.15.0",
     "typescript": "^5"
   }
 }
