ログインのエンドポイントを作った

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "node ts-node prisma/seed/index.ts"
   },
   "dependencies": {
     "argon2": "^0.44.0",
@@ -25,6 +26,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "prisma": "^6.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
